logs/811-1703788163.txt
  File "C:\Users\Administrator\magicstore\asd.py", line 135
    update_account(acc :=| {'magicstore':
                         ^
SyntaxError: invalid syntax
